# LLM-exploration

./: .gitignore  README.md  packages.txt  renovate.json  requirements.txt
.devcontainer/: devcontainer.json
agents/: .claudeignore  example
agents/autogen-playwright/: .cursorignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
agents/autogen-playwright/.streamlit/: config.toml
agents/autogen-playwright/examples/: run_web_test.py
agents/autogen-playwright/src/autogen_playwright/: __init__.py  st_app.py
agents/autogen-playwright/src/autogen_playwright/agents/: web_testing_agents.py
agents/autogen-playwright/src/autogen_playwright/llm/: config.py  provider.py
agents/autogen-playwright/src/autogen_playwright/ops/: __init__.py  log_analyzer.py  utils.py
agents/autogen-playwright/src/autogen_playwright/prompts/: __init__.py  prompts.py
agents/autogen-playwright/src/autogen_playwright/reporting/: test_reporter.py
agents/autogen-playwright/src/autogen_playwright/skills/: playwright_skill.py  test_playwrightskill.py
agents/autogen-playwright/src/autogen_playwright/utils/: __init__.py  common_utils.py  constants.py
agents/autogen-playwright/test_reports/run_20250107_213129/: report.md
agents/autogen-playwright/test_reports/run_20250107_213335/: report.md
agents/autogen-playwright/tests/: test_llm_config.py  test_playwright_skill.py  test_web_testing.py
apps/service-app/: pyproject.toml
gpt-api/: HLW-1.ipynb  HLW-2.ipynb  HLW-3.ipynb  HLW-4.ipynb  HLW-5.ipynb  HLW-6.ipynb  L1_student.ipynb  README.md
(+26 files in other folders)
