[tool.poetry]
name = "service-app"
version = "0.1.0"
description = ""
authors = ["steven gonsalvez <steven.gonsalvez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
panel = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
